--- a/style.css
+++ b/style.css
@@ -54,6 +54,9 @@ button:disabled {
     background-position: center center;
   }
   button {
+    width: 100px;
+    height: 30px;
     box-shadow: 5px 5px 30px 20px rgba(0, 0, 0, 0.5);
+    font-size: 10px;
   }
 }
